Change API_URL to use relative path for Vercel
Updated API_URL to use Vercel serverless functions.

--- a/admin.html
+++ b/admin.html
@@ -337,7 +337,7 @@
     </div>
 
     <script>
-        const API_URL = 'https://metamask-payment-backend.onrender.com/api'; // TEMPORARY - UPDATE THIS to your backend URL
+        const API_URL = '/api'; // Vercel serverless functions
         let allTransactions = [];
         let currentFilter = 'all';
 
